# hardy

./: .dockerignore  .gitignore  404.html  AGENTS.md  Cargo.toml  Dockerfile  PICS_Proforma.md  README.md  SECURITY.md  TODO.md  TROUBLESHOOTING.md  compose.postgres.yml  compose.yaml  compose.yml  example.config  hardy.toml  implementation_guide.md  index.html  interop_test_plan.md  missing_features.md  mkdocs.yml  sitemap.xml
async/: CHANGELOG.md  Cargo.toml  HARDY_ASYNC_PROPOSAL.md  README.md
async/docs/: TODO.md  design.md  test_coverage_report.md  unit_test_plan.md
async/src/: bounded_task_pool.rs  cancellation_token.rs  channel.rs  closeable.rs  join_handle.rs  lib.rs  notify.rs  signal.rs  spawn.rs  task_pool.rs  time.rs  watcher.rs
bibe/: Cargo.toml  README.md
bibe/docs/: design.md
bibe/src/: cla.rs  config.rs  lib.rs  service.rs
bpa/: CHANGELOG.md  Cargo.toml  README.md  build.rs  example.config
bpa-core/: Cargo.toml
bpa-core/fuzz/: Cargo.toml
bpa-core/src/: bundle.rs  lib.rs  storage.rs
bpa-server/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.yaml  example.config  example_config.toml  example_config.yaml  example_egress_policy.yaml  static_routes_example
bpa-server/docs/: design.md  static_routes_design.md  test_coverage_report.md  test_plan.md
bpa-server/examples/: config.yaml  egress-policy.yaml  keys.jwks  static_routes
bpa-server/src/: bpsec.rs  built_in_services.rs  clas.rs  cli.rs  config.rs  echo.rs  echo_config.rs  error.rs  filters.rs  fuzzing.rs  grpc.rs  main.rs  policy.rs  services.rs  settings.rs  test_plan.md  watcher.rs
bpa-server/tests/: test_bundle_processing.sh  test_static_routes.sh
bpa/benches/: bundle_bench.rs
bpa/docs/: NO_STD.md  TODO.md  bundle_processing_design.md  bundle_state_machine_design.md  bundle_transitions_design.md  cla_integration_test_plan.md  component_test_plan.md  design.md  filter_subsystem_design.md  fuzz_test_plan.md  multi_replica_architecture.md  policy_subsystem_design.md  queue_architecture.md  routing_design.md  routing_subsystem_design.md  service_integration_test_plan.md  storage_harness_design.md  storage_integration_test_plan.md  storage_subsystem_design.md  streaming_pipeline_design.md  test_coverage_report.md  unit_test_plan.md
bpa/fuzz/: .gitignore  Cargo.toml  coverage.sh  fuzz_test_plan.md  ingress.config  ingress_static_routes  test.rs
bpa/schemas/: 01_test.sql
bpa/src/: admin_endpoints.rs  app_registry.rs  bp7_parse.rs  bpa.rs  builder.rs  bundle.rs  bundle_mem.rs  cache.rs  cbor.rs  cla.rs  cla_registry.rs  component_test_plan.md  config.rs  connected.rs  database.rs  dispatcher.rs  egress.rs  error.rs  fib.rs  fib_impl.rs  fuzzing.rs  ingress.rs  key_store.rs  keys.rs  lib.rs  logger.rs  main.rs  metadata.rs  metadata_mem.rs  metrics.rs  node_id.rs  node_ids.rs  otel_metrics.rs  reaper.rs  reassembler.rs  recover.rs  registration.rs  rib.rs  routes.rs  sentinel.rs  (+11 more)
bpa/tests/: key_store.rs  pattern_key_source.rs  pipeline.rs  storage_integration_test_plan.md
bpv7/: CHANGELOG.md  Cargo.toml  README.md
bpv7/docs/: TODO.md  bundle_compare.md  component_test_plan.md  design.md  fuzz_test_plan.md  parser_design.md  test_coverage_report.md  unit_test_plan.md  unit_test_plan_bpsec.md
bpv7/fuzz/: Cargo.toml  coverage.sh  fuzz_test_plan.md  rewritten_bundle  test.rs
bpv7/src/: block.rs  block_flags.rs  block_type.rs  bpsec.rs  builder.rs  bundle.rs  bundle_age.rs  bundle_flags.rs  bundle_id.rs  checks.rs  cmp.rs  component_test_plan.md  crc.rs  creation_timestamp.rs  dtn_time.rs  editor.rs  error.rs  hop_info.rs  lib.rs  lifetime.rs  metadata.rs  parse.rs  primary_block.rs  rewrite.rs  status_report.rs  unit_test_plan.md
bpv7/tests/: checks.rs  cmp.rs  editor.rs  eid.rs  parse.rs  primary_block.rs  rfc9173.rs  signer.rs  streaming.rs
bpv7/tools/: CHANGELOG.md  Cargo.toml  README.md  add_block.rs  bundle.rs  create.rs  decrypt.rs  dump.rs  encrypt.rs  extract.rs  flags.rs  inspect.rs  io.rs  keys.rs  mkbundle.rs  parse_bundle.rs  print.rs  remove_bcb.rs  remove_bib.rs  remove_block.rs  remove_encryption.rs  remove_integrity.rs  rewrite.rs  sign.rs  update_block.rs  update_primary.rs  validate.rs  verify.rs
btpu/: Cargo.toml  README.md
btpu/src/: codec.rs  error.rs  fec.rs  header.rs  hint.rs  lib.rs  message.rs  receiver.rs  sender.rs  service.rs  transfer.rs
btpu/tests/: tower.rs
cbor/: CHANGELOG.md  Cargo.toml  README.md
cbor/docs/: design.md  fuzz_test_plan.md  test_coverage_report.md  unit_test_plan.md
cbor/fuzz/: Cargo.toml  fuzz_test_plan.md  test.rs
cbor/src/: decode.rs  decode_seq.rs  decode_tests.rs  decoder.rs  encode.rs  encode_tests.rs  encoder.rs  error.rs  head.rs  lib.rs  unit_test_plan.md
cbor/tests/: decode.rs  encode.rs  stream.rs
cbor/tools/: Cargo.toml  README.md  cbor.rs  compose.rs  inspect.rs  io.rs
echo-service/: CHANGELOG.md  Cargo.toml  README.md
echo-service/docs/: design.md  test_coverage_report.md  test_plan.md
echo-service/src/: lib.rs
eid-patterns/: CHANGELOG.md  Cargo.toml  README.md
eid_pattern/: Cargo.toml
file-cla/: CHANGELOG.md  Cargo.toml  README.md  example_config.yaml
file-service/: Cargo.toml  Dockerfile  config.yaml
grpc/: Cargo.toml
io/: Cargo.toml
ipn-legacy-filter/: CHANGELOG.md  Cargo.toml  README.md
localdisk-storage/: CHANGELOG.md  Cargo.toml  README.md
otel/: CHANGELOG.md  Cargo.toml  README.md
plugin-abi/: Cargo.toml  build.rs
postgres-storage/: CHANGELOG.md  Cargo.toml  README.md
proto/: CHANGELOG.md  Cargo.toml  README.md  TODO.md  application.proto  bpa.proto  build.rs  cla.proto  lib.rs  routing.proto  service.proto
s3-storage/: CHANGELOG.md  Cargo.toml  README.md
sqlite-storage/: CHANGELOG.md  Cargo.toml  README.md  build.rs
tcpcl/: Cargo.toml  build.rs  example.config
tcpclv4/: CHANGELOG.md  Cargo.toml  README.md  example_config.toml  example_config.yaml
tcpclv4-server/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
tools/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
tvr/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  tvr.proto
(+700 files in other folders)
