[workspace]
resolver = "2"
members = [
    "async",
    "bibe",
    "bpa-server",
    "bpa",
    "bpa/fuzz",
    "bpv7",
    "bpv7/tools",
    "bpv7/fuzz",
    "cbor",
    "cbor/tools",
    "cbor/fuzz",
    "echo-service",
    "eid-patterns",
    "eid-patterns/fuzz",
    "file-cla",
    "ipn-legacy-filter",
    "localdisk-storage",
    "otel",
    "proto",
    "sqlite-storage",
    "tcpclv4",
    "tcpclv4-server",
    "tools",
    "tests/storage",
    "postgres-storage",
]

# Stub patch to resolve a `links = "sqlite3"` conflict between rusqlite 0.38
# (libsqlite3-sys ^0.36) and sqlx-sqlite 0.8.6 (libsqlite3-sys ^0.30).
# Cargo resolves optional deps eagerly, so both versions collide even though
# the `sqlite` feature on sqlx is never activated in this workspace.
# The stub has no dependencies, removing the conflict at resolution time.
# See patches/sqlx-sqlite/README.md for full explanation.
[patch.crates-io]
sqlx-sqlite = { path = "patches/sqlx-sqlite" }

[profile.release]
#lto = true
#codegen-units = 1

[workspace.package]
edition = "2024"
rust-version = "1.86"
