[workspace]
resolver = "2"
exclude = [
    "tests/interop/mtcp",
]
members = [
    "async",
    "bibe",
    "bpa-server",
    "bpa",
    "bpa/fuzz",
    "bpv7",
    "bpv7/tools",
    "bpv7/fuzz",
    "btpu",
    "cbor",
    "cbor/tools",
    "cbor/fuzz",
    "echo-service",
    "eid-patterns",
    "eid-patterns/fuzz",
    "file-cla",
    "ipn-legacy-filter",
    "localdisk-storage",
    "otel",
    "s3-storage",
    "proto",
    "sqlite-storage",
    "tcpclv4",
    "tcpclv4/fuzz",
    "tcpclv4-server",
    "tools",
    "tvr",
    "tests/bpsec",
    "tests/storage",
    "postgres-storage",
]

# Stub patch: Cargo resolves sqlx's optional `sqlx-sqlite` dep eagerly (to produce a lock
# file valid for all feature combinations), which drags in `libsqlite3-sys`
# (links = "sqlite3"). That collides with rusqlite's copy — Cargo allows only one package
# per `links` value — and fails resolution even though we never enable sqlx's sqlite
# feature. The stub replaces sqlx-sqlite with a no-dep shell at the same version, removing
# the conflict. See patches/sqlx-sqlite/README.md.
[patch.crates-io]
sqlx-sqlite = { path = "patches/sqlx-sqlite" }

[profile.release]
#lto = true
#codegen-units = 1

[workspace.package]
edition = "2024"
rust-version = "1.87"
license = "Apache-2.0"
repository = "https://github.com/ricktaylor/hardy"
