[package]
name = "hardy-async"
version = "0.1.0"
edition.workspace = true
description = "Runtime-agnostic async primitives for the Hardy DTN implementation"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["tokio"]
std = ["time/std", "tracing?/std"]
tokio = ["std", "dep:tokio", "dep:tokio-util"]
tracing = ["dep:tracing"]

[dependencies]
time = { version = "0.3.47", default-features = false }
async-trait = "0.1.89"
tokio = { version = "1.49.0", optional = true, features = ["rt", "macros", "time"] }
tokio-util = { version = "0.7.18", optional = true, features = ["rt"] }
tracing = { version = "0.1.44", default-features = false, optional = true }
spin = "0.10.0"
trace-err = "1.0.0"

# Future runtime support
# smol = ["dep:async-executor", "dep:async-channel"]
# embassy = ["dep:embassy-executor", "dep:embassy-sync", "dep:embassy-time"]

[dev-dependencies]
hardy-async = { path = ".", features = ["tokio"] }
