[package]
name = "hardy-async"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["async", "task-pool", "cancellation", "no-std"]
categories = ["asynchronous", "concurrency"]
exclude = ["docs/"]
description = "Runtime-agnostic async primitives for the Hardy DTN implementation"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["tokio"]
std = ["time/std", "tracing/std"]
tokio = ["std", "dep:tokio", "dep:tokio-util"]
instrument = ["tracing/attributes"]

[dependencies]
time = { version = "0.3", default-features = false }
async-trait = "0.1"
tokio = { version = "1", optional = true, features = ["rt", "macros", "time", "signal"] }
tokio-util = { version = "0.7", optional = true, features = ["rt"] }
tracing = { version = "0.1", default-features = false }
spin = "0.10"
trace-err = "1"

# Future runtime support
# smol = ["dep:async-executor", "dep:async-channel"]
# embassy = ["dep:embassy-executor", "dep:embassy-sync", "dep:embassy-time"]

[dev-dependencies]
hardy-async = { path = ".", features = ["tokio"] }
