[package]
name = "hardy-bibe"
description = "Bundle-in-Bundle Encapsulation (BIBE) tunnel endpoints"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
std = ["hardy-bpa/std", "hardy-bpv7/std"]
serde = ["dep:serde", "hardy-bpa/serde", "hardy-bpv7/serde"]

[dependencies]
time = { version = "0.3.47", default-features = false }
hardy-async = { path = "../async", default-features = false }
hardy-bpa = { path = "../bpa", default-features = false }
hardy-bpv7 = { path = "../bpv7", default-features = false }
hardy-cbor = { path = "../cbor" }
thiserror = "2.0.18"
tracing = "0.1.44"
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
