[package]
name = "hardy-bibe"
description = "Bundle-in-Bundle Encapsulation (BIBE) tunnel endpoints"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
std = ["hardy-bpa/std", "hardy-bpv7/std"]
serde = ["dep:serde", "hardy-bpa/serde", "hardy-bpv7/serde"]

[dependencies]
time = { version = "0.3", default-features = false }
hardy-async = { version = "0.1", path = "../async", default-features = false }
hardy-bpa = { version = "0.1", path = "../bpa", default-features = false }
hardy-bpv7 = { version = "0.5", path = "../bpv7", default-features = false }
hardy-cbor = { version = "1", path = "../cbor" }
thiserror = "2"
tracing = { version = "0.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
