[package]
name = "hardy-bpa-core"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
hardy-cbor = { path = "../cbor" }
thiserror = "1.0.61"
tracing = "0.1.40"
config = { version = "0.14.0" }
time = "0.3.36"
async-trait = "0.1.80"
sha2 = "0.10.8"
base64 = "0.22.1"
