[package]
name = "hardy-bpa-server"
description = "A BPv7 DTN Bundle processing agent"
version = "0.1.0"
edition.workspace = true

[features]
default = ["localdisk-storage", "grpc", "tcpclv4", "otel", "ipn-legacy-filter", "echo"]
otel = ["dep:hardy-otel"]
sqlite-storage = ["dep:hardy-sqlite-storage"]
postgres-storage = ["dep:hardy-postgres-storage"]
localdisk-storage = ["dep:hardy-localdisk-storage"]
s3-storage = ["dep:hardy-s3-storage"]
grpc = ["dep:hardy-proto"]
tcpclv4 = ["dep:hardy-tcpclv4"]
file-cla = ["dep:hardy-file-cla"]
ipn-legacy-filter = ["dep:hardy-ipn-legacy-filter"]
echo = ["dep:hardy-echo-service"]
instrument = [
    "tracing/attributes",
    "hardy-bpa/instrument",
    "hardy-proto?/instrument",
    "hardy-sqlite-storage?/instrument",
    "hardy-postgres-storage?/instrument",
    "hardy-localdisk-storage?/instrument",
    "hardy-s3-storage?/instrument",
    "hardy-tcpclv4?/instrument",
    "hardy-file-cla?/instrument",
    "hardy-echo-service?/instrument",
]

[dependencies]
hardy-async = { path = "../async" }
hardy-bpv7 = { path = "../bpv7", features = ["serde"] }
hardy-bpa = { path = "../bpa", default-features = false, features = ["serde", "rfc9173", "tokio", "no-rfc9171-autoregister"] }
hardy-eid-patterns = { path = "../eid-patterns", features = ["serde", "dtn-pat-item"] }
hardy-proto = { path = "../proto", optional = true }
hardy-sqlite-storage = { path = "../sqlite-storage", optional = true }
hardy-postgres-storage = { path = "../postgres-storage", optional = true }
hardy-localdisk-storage = { path = "../localdisk-storage", features = ["serde"], optional = true }
hardy-s3-storage = { path = "../s3-storage", features = ["serde"], optional = true }
hardy-tcpclv4 = { path = "../tcpclv4", features = ["serde"], optional = true }
hardy-file-cla = { path = "../file-cla", features = ["serde"], optional = true }
hardy-otel = { path = "../otel", optional = true }
hardy-ipn-legacy-filter = { path = "../ipn-legacy-filter", features = ["serde"], optional = true }
hardy-echo-service = { path = "../echo-service", optional = true }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "signal"] }
config = { version = "0.15.22", features = ["yaml", "toml", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
directories = "6.0.0"
getopts = "0.2.24"
tracing = { version = "0.1.44", default-features = false }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
notify-debouncer-full = "0.7.0"
notify = { version = "8.2.0", default-features = false, features = ["macos_kqueue"] }
trace-err = "1.0.0"
chumsky = "0.12.0"
anyhow = "1.0.102"
thiserror = "2"
flume = "0.12.0"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
