[package]
name = "hardy-bpa-server"
description = "A BPv7 DTN Bundle processing agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["localdisk-storage", "grpc", "tcpclv4", "otel", "ipn-legacy-filter", "echo"]
otel = ["dep:hardy-otel"]
sqlite-storage = ["dep:hardy-sqlite-storage"]
postgres-storage = ["dep:hardy-postgres-storage"]
localdisk-storage = ["dep:hardy-localdisk-storage"]
s3-storage = ["dep:hardy-s3-storage"]
grpc = ["dep:hardy-proto"]
tcpclv4 = ["dep:hardy-tcpclv4"]
file-cla = ["dep:hardy-file-cla"]
ipn-legacy-filter = ["dep:hardy-ipn-legacy-filter"]
echo = ["dep:hardy-echo-service"]
instrument = [
    "tracing/attributes",
    "hardy-bpa/instrument",
    "hardy-proto?/instrument",
    "hardy-sqlite-storage?/instrument",
    "hardy-postgres-storage?/instrument",
    "hardy-localdisk-storage?/instrument",
    "hardy-s3-storage?/instrument",
    "hardy-tcpclv4?/instrument",
    "hardy-file-cla?/instrument",
    "hardy-echo-service?/instrument",
]

[dependencies]
hardy-async = { version = "0.1", path = "../async" }
hardy-bpv7 = { version = "0.5", path = "../bpv7", features = ["serde"] }
hardy-bpa = { version = "0.1", path = "../bpa", default-features = false, features = ["serde", "rfc9173", "tokio", "no-rfc9171-autoregister"] }
hardy-eid-patterns = { version = "0.3", path = "../eid-patterns", features = ["serde", "dtn-pat-item"] }
hardy-proto = { version = "0.1", path = "../proto", optional = true }
hardy-sqlite-storage = { version = "0.5", path = "../sqlite-storage", optional = true }
hardy-postgres-storage = { version = "0.1", path = "../postgres-storage", optional = true }
hardy-localdisk-storage = { version = "0.5", path = "../localdisk-storage", features = ["serde"], optional = true }
hardy-s3-storage = { version = "0.1", path = "../s3-storage", features = ["serde"], optional = true }
hardy-tcpclv4 = { version = "0.3", path = "../tcpclv4", features = ["serde"], optional = true }
hardy-file-cla = { version = "0.1", path = "../file-cla", features = ["serde"], optional = true }
hardy-otel = { version = "0.1", path = "../otel", optional = true }
hardy-ipn-legacy-filter = { version = "0.1", path = "../ipn-legacy-filter", features = ["serde"], optional = true }
hardy-echo-service = { version = "0.1", path = "../echo-service", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
config = { version = "0.15", features = ["yaml", "toml", "json"] }
serde = { version = "1", features = ["derive"] }
directories = "6"
getopts = "0.2"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify-debouncer-full = "0.7"
notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
trace-err = "1"
chumsky = "0.12"
anyhow = "1"
thiserror = "2"
flume = "0.12"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
