[package]
name = "hardy-bpa-server"
description = "A BPv7 DTN Bundle processing agent"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["sqlite-storage", "localdisk-storage", "grpc", "tcpclv4", "otel", "ipn-legacy-filter", "echo"]
otel = ["dep:hardy-otel"]
sqlite-storage = ["dep:hardy-sqlite-storage"]
postgres-storage = ["dep:hardy-postgres-storage"]
localdisk-storage = ["dep:hardy-localdisk-storage"]
s3-storage = ["dep:hardy-s3-storage"]
grpc = ["dep:hardy-proto"]
tcpclv4 = ["dep:hardy-tcpclv4"]
file-cla = ["dep:hardy-file-cla"]
ipn-legacy-filter = ["dep:hardy-ipn-legacy-filter"]
echo = ["dep:hardy-echo-service"]
instrument = [
    "tracing/attributes",
    "hardy-async/instrument",
    "hardy-bpa/instrument",
    "hardy-proto?/instrument",
    "hardy-sqlite-storage?/instrument",
    "hardy-postgres-storage?/instrument",
    "hardy-localdisk-storage?/instrument",
    "hardy-s3-storage?/instrument",
    "hardy-tcpclv4?/instrument",
    "hardy-file-cla?/instrument",
    "hardy-echo-service?/instrument",
]

[dependencies]
hardy-async = { version = "0.2", path = "../async", features = ["watcher"] }
hardy-bpv7 = { version = "0.6", path = "../bpv7", features = ["serde"] }
hardy-bpa = { version = "0.2", path = "../bpa", default-features = false, features = ["serde", "rfc9173", "tokio", "no-rfc9171-autoregister"] }
hardy-eid-patterns = { version = "0.4", path = "../eid-patterns", features = ["serde", "dtn-pat-item"] }
hardy-proto = { version = "0.2", path = "../proto", features = ["serde"], optional = true }
hardy-sqlite-storage = { version = "0.6", path = "../sqlite-storage", optional = true }
hardy-postgres-storage = { version = "0.2", path = "../postgres-storage", optional = true }
hardy-localdisk-storage = { version = "0.6", path = "../localdisk-storage", features = ["serde"], optional = true }
hardy-s3-storage = { version = "0.2", path = "../s3-storage", features = ["serde"], optional = true }
hardy-tcpclv4 = { version = "0.4", path = "../tcpclv4", features = ["serde"], optional = true }
hardy-file-cla = { version = "0.2", path = "../file-cla", features = ["serde"], optional = true }
hardy-otel = { version = "0.1", path = "../otel", optional = true }
hardy-ipn-legacy-filter = { version = "0.2", path = "../ipn-legacy-filter", features = ["serde"], optional = true }
hardy-echo-service = { version = "0.2", path = "../echo-service", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
config = { version = "0.15", features = ["yaml", "toml", "json"] }
serde = { version = "1", features = ["derive"] }
directories = "6"
getopts = "0.2"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trace-err = "1"
chumsky = "0.13"
anyhow = "1"
thiserror = "2"
serde_json = "1"
arc-swap = "1"

[dev-dependencies]
hex-literal = "1"
tempfile = "3"
serial_test = "3"
