[package]
name = "hardy-bpa"
version = "0.1.0"
edition.workspace = true

[features]
default = ["rfc9173", "tokio"]
rfc9173 = ["hardy-bpv7/rfc9173"]
tokio = ["hardy-async/tokio"]
serde = ["dep:serde","hardy-bpv7/serde","hardy-eid-patterns/serde"]
tracing = ["hardy-async/tracing"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
hardy-async = { path = "../async" }
hardy-bpv7 = { path = "../bpv7", features = ["std"] }
hardy-cbor = { path = "../cbor" }
hardy-eid-patterns = { path = "../eid-patterns" }
time = { version = "0.3.46", features = ["serde-human-readable"] }
async-trait = "0.1.89"
bytes = "1.11.0"
tracing = "0.1.44"
metrics = "0.24.3"
trace-err = "0.1.5"
rand = "0.9.2"
lru = "0.16.3"
thiserror = "2.0.18"
flume = "0.12.0"
futures = "0.3"
serde = { version = "1.0.228", features = ["derive","rc"], optional = true }

[dev-dependencies]
criterion = "0.8"
hardy-bpa-fuzz = { path = "./fuzz" }
#hardy-bpa-fuzz = { path = "./fuzz", features = ["sqlite-storage","localdisk-storage"] }

[[bench]]
name = "bundle_bench"
harness = false
