[package]
name = "hardy-bpv7"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["rfc9173"]
std = ["time/std","bincode/std","serde/std"]
rfc9173 = ["dep:hmac", "dep:aes-gcm", "dep:aes-kw"]
serde = ["dep:serde","hashbrown/serde"]
bincode = ["dep:bincode"]

[dependencies]
hardy-cbor = { path = "../cbor" }
thiserror = { version = "2.0.17", default-features = false }
time = { version = "0.3.44", default-features = false, features = ["macros"] }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
urlencoding = "2.1.3"
crc = "3.4.0"
sha2 = "0.10.9"
rand = { version = "0.9.2", default-features = false, features = ["alloc","os_rng"] }
zeroize = { version = "1.8.2", features = ["derive"] }
winnow = { version = "0.7.14", default-features = false, features = ["alloc"] }
hashbrown = "0.16.1"
hmac = { version = "0.12.1", optional = true }
aes-gcm = { version = "0.10.3", features = ["zeroize"], optional = true }
aes-kw = { version = "0.2.1", default-features = false, features = ["alloc"], optional = true }
serde = { version = "1.0.228", default-features = false, features = ["alloc","derive"], optional = true }
bincode = { version = "2.0.1", default-features = false, features = ["alloc","derive"], optional = true }

[dev-dependencies]
hex-literal = "1.1.0"
serde_json = "1.0.149"
