[package]
name = "hardy-bpv7"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["dtn", "bpv7", "bundle-protocol", "rfc9171", "cbor"]
categories = ["network-programming", "encoding", "no-std::no-alloc"]
exclude = ["docs/"]
description = "BPv7 bundle format library implementing RFC 9171"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["rfc9173"]
std = [
    "time/std",
    "thiserror/std",
    "serde?/std",
    "percent-encoding/std",
    "winnow/std",
    "zeroize/std",
    "portable-atomic/std",
    "rand?/std",
    "aes-gcm?/std",
]
# Enable this feature on targets without native CAS instructions (e.g., thumbv6m / Cortex-M0).
# Requires a critical-section implementation - see https://docs.rs/portable-atomic
critical-section = ["portable-atomic/critical-section"]
rfc9173 = ["bpsec", "dep:hmac", "dep:sha2", "dep:aes-gcm", "dep:aes-kw", "dep:rand"]
serde = ["dep:serde","hashbrown/serde"]
# Internal feature: enables BPSec signing/encryption modules.
# Automatically enabled by security context features (rfc9173, and future cose).
bpsec = []

[dependencies]
hardy-cbor = { path = "../cbor" }
thiserror = { version = "2.0.18", default-features = false }
time = { version = "0.3.45", default-features = false, features = ["formatting", "macros"] }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
percent-encoding = { version = "2.3.2", default-features = false, features = ["alloc"] }
crc = "3.4.0"
sha2 = { version = "0.11.0", default-features = false, optional = true }
rand = { version = "0.10.0", default-features = false, features = ["alloc","sys_rng"], optional = true }
portable-atomic = { version = "1", default-features = false, features = ["fallback"] }
zeroize = { version = "1.8.2", features = ["derive"] }
winnow = { version = "1.0.1", default-features = false, features = ["alloc", "ascii"] }
hashbrown = "0.17.0"
smallvec = "1.15"
hmac = { version = "0.13.0", default-features = false, optional = true }
aes-gcm = { version = "0.10.3", default-features = false, features = ["alloc", "aes", "zeroize"], optional = true }
aes-kw = { version = "0.3.0", default-features = false, optional = true }
serde = { version = "1.0.228", default-features = false, features = ["alloc","derive"], optional = true }

[dev-dependencies]
hex-literal = "1.1.0"
serde_json = "1.0.149"
hardy-bpv7 = { path = ".", features = ["serde", "std"] }
