[package]
name = "hardy-btpu"
description = "Bundle Transfer Protocol - Unidirectional (BTP-U) codec and transfer logic"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["dtn", "bpv7", "btpu", "convergence-layer", "unidirectional"]
categories = ["network-programming"]
exclude = ["docs/"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
serde = ["dep:serde"]
rand = ["dep:rand_core"]
tower = ["dep:tower", "dep:futures-core"]

[dependencies]
bytes = { version = "1", default-features = false }
thiserror = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
rand_core = { version = "0.6", default-features = false, optional = true }
tower = { version = "0.5", default-features = false, optional = true }
futures-core = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
rand = "0.9"
tokio = { version = "1", features = ["macros", "rt"] }
tower = { version = "0.5", features = ["util", "limit"] }
futures = "0.3"
