[package]
name = "hardy-cbor"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["cbor", "rfc8949", "encoding", "no-std", "canonical"]
categories = ["encoding", "no-std::no-alloc"]
exclude = ["docs/"]
description = "RFC 8949 compliant canonical CBOR encoder/decoder"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = ["hardy-io/std"]

[dependencies]
thiserror = { version = "2", default-features = false }
half = { version = "2", default-features = false, features = ["num-traits"] }
num-traits = { version = "0.2", default-features = false }
hardy-io = { version = "0.1", path = "../io", default-features = false }

[dev-dependencies]
hex-literal = "1"
