[package]
name = "hardy-cbor"
version = "2.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["cbor", "rfc8949", "encoding", "no-std", "canonical"]
categories = ["encoding", "no-std::no-alloc"]
exclude = ["docs/"]
description = "RFC 8949 compliant canonical CBOR encoder/decoder"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
thiserror = { version = "2", default-features = false }
half = { version = "2", default-features = false, features = ["num-traits"] }
num-traits = { version = "0.2", default-features = false }
smallvec = "1"

[dev-dependencies]
hex-literal = "1"
