[package]
name = "hardy-echo-service"
description = "An in-process echo service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["dtn", "bpv7", "echo", "bundle-protocol"]
categories = ["network-programming"]
exclude = ["docs/"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = ["hardy-async/std", "hardy-bpa/std", "hardy-bpv7/std"]
instrument = ["tracing/attributes"]

[dependencies]
hardy-async = { path = "../async", default-features = false }
hardy-bpa = { path = "../bpa", default-features = false }
hardy-bpv7 = { path = "../bpv7", default-features = false }
tracing = { version = "0.1.44", default-features = false }
time = { version = "0.3.47", default-features = false }
