[package]
name = "hardy-eid-patterns"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
std = ["thiserror/std"]
dtn-pat-item = ["std","dep:urlencoding","dep:glob"]
serde = ["dep:serde","hardy-bpv7/serde"]

[dependencies]
hardy-bpv7 = { path = "../bpv7" }
thiserror = { version = "2.0.18", default-features = false }
winnow = { version = "0.7.14", default-features = false, features = ["alloc"] }
urlencoding = { version = "2.1.3", optional = true }
glob = { version = "0.3.3", optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
hex-literal = "1.1.0"
hardy-eid-patterns = { path = ".", features = ["dtn-pat-item"] }
