[package]
name = "hardy-eid-patterns"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
std = ["thiserror/std", "hardy-bpv7/std", "winnow/std", "percent-encoding?/std", "serde?/std"]
dtn-pat-item = ["std","dep:percent-encoding","dep:glob"]
serde = ["dep:serde","hardy-bpv7/serde"]

[dependencies]
hardy-bpv7 = { path = "../bpv7", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
winnow = { version = "0.7.14", default-features = false, features = ["alloc"] }
percent-encoding = { version = "2.3.2", default-features = false, features = ["alloc"], optional = true }
glob = { version = "0.3.3", optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
hex-literal = "1.1.0"
hardy-eid-patterns = { path = ".", features = ["dtn-pat-item"] }
