[package]
name = "hardy-eid-patterns"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["dtn", "bpv7", "eid", "pattern-matching", "no-std"]
categories = ["network-programming", "no-std::no-alloc"]
exclude = ["docs/"]
description = "EID pattern matching for BPv7 Endpoint Identifiers"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
std = ["thiserror/std", "hardy-bpv7/std", "winnow/std", "percent-encoding?/std", "serde?/std"]
dtn-pat-item = ["std","dep:percent-encoding","dep:glob"]
serde = ["dep:serde","hardy-bpv7/serde"]

[dependencies]
hardy-bpv7 = { path = "../bpv7", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
winnow = { version = "1.0.1", default-features = false, features = ["alloc"] }
percent-encoding = { version = "2.3.2", default-features = false, features = ["alloc"], optional = true }
glob = { version = "0.3.3", optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
hex-literal = "1.1.0"
hardy-eid-patterns = { path = ".", features = ["dtn-pat-item"] }
