[package]
name = "hardy-eid-pattern"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
hardy-bpv7 = { path = "../bpv7" }
thiserror = "2.0.12"
regex = "1.11.1"
urlencoding = "2.1.3"
serde = { version = "1.0.219", features = ["derive"] }
winnow = "0.7.4"

[dev-dependencies]
hex-literal = "1.0.0"
