[package]
name = "hardy-eid-pattern"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["dtn-pat-item"]
dtn-pat-item = ["dep:regex","dep:urlencoding"]

[dependencies]
hardy-bpv7 = { path = "../bpv7" }
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
winnow = "0.7.10"
regex = { version = "1.11.1", optional = true }
urlencoding = { version = "2.1.3", optional = true }
glob = "0.3.2"

[dev-dependencies]
hex-literal = "1.0.0"
