[package]
name = "hardy-eid-pattern"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = ["dtn-pat-item"]
dtn-pat-item = ["dep:urlencoding"]
serde = ["dep:serde","hardy-bpv7/serde"]

[dependencies]
hardy-bpv7 = { path = "../bpv7" }
thiserror = "2.0.15"
winnow = "0.7.12"
urlencoding = { version = "2.1.3", optional = true }
glob = "0.3.3"
serde = { version = "1.0.226", features = ["derive"], optional = true }

[dev-dependencies]
hex-literal = "1.0.0"
