[package]
name = "hardy-file-cla"
description = "A File-based convergence layer"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
serde = ["dep:serde","hardy-bpa/serde","hardy-bpv7/serde"]
tracing = []

[dependencies]
hardy-async = { path = "../async" }
hardy-bpa = { path = "../bpa" }
hardy-bpv7 = { path = "../bpv7" }
tracing = "0.1.44"
tokio = { version = "1.49.0", features = ["macros", "fs"] }
tokio-util = "0.7.18"
trace-err = "1.0.0"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"], optional = true }
notify-debouncer-full = "0.7.0"
notify = { version = "8.2.0", default-features = false, features = ["macos_kqueue"] }
flume = "0.12.0"
