[package]
name = "hardy-file-cla"
description = "A File-based convergence layer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["dtn", "bpv7", "convergence-layer", "file"]
categories = ["network-programming"]
exclude = ["docs/"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []
serde = ["dep:serde","hardy-bpa/serde","hardy-bpv7/serde"]
instrument = ["tracing/attributes"]

[dependencies]
hardy-async = { path = "../async" }
hardy-bpa = { path = "../bpa" }
hardy-bpv7 = { path = "../bpv7" }
tracing = { version = "0.1.44", default-features = false }
tokio = { version = "1.51.1", features = ["macros", "fs"] }
tokio-util = "0.7.18"
trace-err = "1.0.0"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"], optional = true }
notify-debouncer-full = "0.7.0"
notify = { version = "8.2.0", default-features = false, features = ["macos_kqueue"] }
flume = "0.12.0"
